# 3SM

./: .gitignore  3SM  3sm.1  3sm.c  LICENSE  Makefile.am  README.md  configure.ac  index.html  params.json
