AUTOMAKE_OPTIONS = -Wportability gnu dist-xz

# what flags you want to pass to the C compiler & linker
AM_CFLAGS  = --std=c99 -pedantic -Wall -Wextra -O2
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = 3sm
3sm_SOURCES  = 3sm.c

man_MANS = 3sm.1

